# osc-protocool

./: .clang-format  CMakeLists.txt  OSCC_core.cpp  OSCC_core.hpp  OSCC_read.cpp  OSCC_read.hpp  OSCC_types.cpp  OSCC_types.hpp  OSCC_types_bundle.cpp  OSCC_types_message.cpp  OSCC_util.cpp  OSCC_util.hpp  OSCC_util_arrayConsumer.hpp  OSCC_write.cpp  OSCC_write.hpp  TODO.txt  arrayConsumer.cpp  arrayConsumer.hpp  main.cpp  oscc_core.hpp  oscc_read.hpp  oscc_types.hpp  oscc_types_address_space.cpp  oscc_types_bundle.cpp  oscc_util.cpp  oscc_util.hpp  oscc_util_arrayConsumer.hpp  oscc_write.cpp  oscc_write.hpp  oscprotocool.cpp
lib/: oscc_address_space.cpp  oscc_address_space.hpp  oscc_core.cpp  oscc_core.hpp  oscc_read.cpp  oscc_read.hpp  oscc_types.hpp  oscc_types_address_space.cpp  oscc_types_bundle.cpp  oscc_types_bundle.hpp  oscc_types_message.cpp  oscc_types_message.hpp  oscc_types_packet.cpp  oscc_types_packet.hpp  oscc_util.cpp  oscc_util.hpp  oscc_util_arrayConsumer.hpp  oscc_util_byte_conversions.cpp  oscc_util_string_conversions.cpp  oscc_write.cpp  oscc_write.hpp
